fixed dark mode background issue

--- a/src/App.css
+++ b/src/App.css
@@ -7,23 +7,21 @@
 body {
   font-family: Poppins, sans-serif;
   min-height: 100vh;
-  background: var(--background);
   color: var(--text-primary);
   justify-content: center;
   align-items: center;
-  background: var(--bkimg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 }
 
 .App {
-  background: no-repeat center center fixed;
+  background-image: var(--bkimg);
+  background-repeat: no-repeat;
+  background-attachment: center;
+  background-position: center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  height: 100vh;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Pacifico&family=Sansita+Swashed:wght@500&family=Staatliches&display=swap");
